--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Student/StudentDashboard.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Student/StudentDashboard.cshtml
@@ -76,6 +76,7 @@
                         <p><span>Email :</span> - <span>@student.Email</span></p>
                         <p><span>Address :</span> - <span>@student.PermanentAddress</span></p>
                         <p><span>Advisor :</span> - <span>@student.Advisor?.FullName</span></p>
+                        <p><span>Current Semester :</span> - <span>@ViewData["CurrentSemester"]</span></p>
                     </div>
                 </div>
 
