--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Student/StudentDashboard.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Student/StudentDashboard.cshtml
@@ -44,6 +44,9 @@
                         <a href="@Url.Action("StudentNotification", "Student")"><i class="fas fa-bell"></i><span>Notifications</span></a>
                     </li>
                     <li class="bottom-items">
+                        <a href="@Url.Action("FAQs", "Student")"><i class="fas fa-question-circle"></i><span>FAQs</span></a>
+                    </li>
+                    <li class="bottom-items">
                         <a href="~/Account/Login"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
                     </li>
                 </div>
