--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Advisor/AdviseeStudents.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Advisor/AdviseeStudents.cshtml
@@ -49,7 +49,7 @@
                 <div class="profile-pic">
                     <img id="admin-profile" src="~/images/profile.png" alt="Admin Profile">
                 </div>
-                <span id="admin-name">| Admin: John Doe</span>
+                <span id="advisor-name">@ViewBag.AdvisorName</span>
                 <span id="date-time">| Date: <span id="current-date"></span> | Time: <span id="current-time"></span></span>
             </div>
         </div>
