--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Advisor/AdvisorNotification.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Advisor/AdvisorNotification.cshtml
@@ -21,7 +21,7 @@
         </div>
         <ul class="nav-links">
             <div class="top-links">
-            <li class="active">
+            <li>
                 <a href="@Url.Action("AdviserDashboard", "Advisor")"><i class="fas fa-home"></i><span>Dashboard</span></a>
             </li>
             <li>
@@ -48,7 +48,7 @@
                 <div class="profile-pic">
                     <img id="admin-profile" src="~/images/profile.png" alt="Admin Profile">
                 </div>
-                <span id="admin-name">|John Doe</span>
+                 <span id="advisor-name">@ViewBag.AdvisorName</span>
                 <span id="date-time">| Date: <span id="current-date"></span> | Time: <span id="current-time"></span></span>
             </div>
         </div>
