--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Student/CourseRegistration.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Student/CourseRegistration.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    var student = ViewData["Student"] as FOE_CourseRegistrationSystem.Models.Student;
     Layout = null;
 }
 <!DOCTYPE html>
@@ -37,6 +38,9 @@
                 <a href="@Url.Action("StudentNotification", "Student")"><i class="fas fa-bell"></i><span>Notifications</span></a>
             </li>
             <li class="bottom-items">
+                <a href="@Url.Action("FAQs", "Student")"><i class="fas fa-question-circle"></i><span>FAQs</span></a>
+            </li>
+            <li class="bottom-items">
                 <a href="~/Account/Login"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
             </li>
         </div>
@@ -50,9 +54,9 @@
             <h1>Student - Dashboard</h1>
             <div class="user-info">
                 <div class="profile-pic">
-                    <img id="student-profile" src="~/images/student1.png" alt="Student Profile">
+                    <img id="admin-profile" src="~/images/profile.png" alt="Admin Profile">
                 </div>
-                <span id="student-id">| 2021E064</span>
+                <span id="student-id">| @(student != null ? student.FullName : "Unknown")</span> 
                 <span id="date-time">| Date: <span id="current-date"></span> | Time: <span id="current-time"></span></span>
             </div>
         </div>
