--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/CourseOffering.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/CourseOffering.cshtml
@@ -39,9 +39,7 @@
             <li class="bottom-items">
                 <a href="@Url.Action("AdminNotification", "Admin")"><i class="fas fa-bell"></i><span>Notifications</span></a>
             </li>
-            <li class="bottom-items">
-                <a href="#"><i class="fas fa-question-circle"></i><span>Help</span></a>
-            </li>
+            
             <li class="bottom-items">
                 <a href="~/Account/Login"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
             </li>
@@ -57,7 +55,7 @@
                 <div class="profile-pic">
                     <img src="~/images/profile.png" alt="Admin Profile">
                 </div>
-                <span id="admin-name">| Admin: @ViewBag.AdminName</span>
+                <span id="admin-name">@ViewBag.AdminName</span>
                 <span id="date-time">| Date: <span id="current-date"></span> | Time: <span id="current-time"></span></span>
             </div>
         </div>
