--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Student/StudentNotification.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Student/StudentNotification.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    var student = ViewData["Student"] as FOE_CourseRegistrationSystem.Models.Student;
     Layout = null;
 }
 <!DOCTYPE html>
@@ -22,7 +23,7 @@
             </div>
             <ul class="nav-links">
                 <div class="top-links">
-                <li class="active">
+                <li>
                     <a href="@Url.Action("Dashboard", "Student")"><i class="fas fa-home"></i><span>Dashboard</span></a>
                 </li>
                 <li>
@@ -36,6 +37,9 @@
         <div class="bottom-links">
             <li class="bottom-items active">
                 <a href="@Url.Action("StudentNotification", "Student")"><i class="fas fa-bell"></i><span>Notifications</span></a>
+            </li>
+            <li class="bottom-items">
+                <a href="@Url.Action("FAQs", "Student")"><i class="fas fa-question-circle"></i><span>FAQs</span></a>
             </li>
             <li class="bottom-items">
                 <a href="~/Account/Login"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
@@ -53,7 +57,7 @@
                 <div class="profile-pic">
                     <img id="admin-profile" src="~/images/profile.png" alt="Admin Profile">
                 </div>
-                <span id="admin-name">| Admin: John Doe</span>
+                <span id="student-id">| @(student != null ? student.FullName : "Unknown")</span> 
                 <span id="date-time">| Date: <span id="current-date"></span> | Time: <span id="current-time"></span></span>
             </div>
         </div>
