--- a/FOE_CourseRegistrationSystem/wwwroot/css/CourseOffering.css
+++ b/FOE_CourseRegistrationSystem/wwwroot/css/CourseOffering.css
@@ -121,7 +121,6 @@
 
 #admin-name, #date-time {
     margin-left: 10px;
-    color: #7f8c8d;
 }
 
 /* Confirmation Message */
@@ -137,8 +136,12 @@
 
 .warning-message {
     background-color: #fff3cd;
-    border-color: #ffeeba;
+    display: none;
     color: #856404;
+    margin-bottom: 20px;
+    padding: 15px;
+    border-radius: var(--card-border-radius);
+    border: 1px solid #c3e6cb;
 }
 
 /* Filter Container */
