--- a/FOE_CourseRegistrationSystem/wwwroot/css/AdviseeCourseRegistration.css
+++ b/FOE_CourseRegistrationSystem/wwwroot/css/AdviseeCourseRegistration.css
@@ -152,10 +152,38 @@ tbody tr:hover {
         background-color: var(--secondary-color);
     }
 
-    /* Eye Icon Button Specific Style */
-    .action-button i {
-        margin-right: 0;
+.view-button {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s;
+}
+
+    .view-button:hover {
+        background-color: var(--primary-color);
     }
+
+.view-button {
+    display: inline-block;
+    padding: 6px 12px;
+    background-color: var(--primary-color);
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    text-align: center;
+}
+
+    .view-button:hover {
+        background-color: var(--primary-color);
+    }
+
 
 /* Search Bar Styles */
 .search-container {
